--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>iAttend</title>
     <script defer src="face-api.min.js"></script>
   </head>
   <body>
